--- a/index.html
+++ b/index.html
@@ -61,36 +61,43 @@ Your browser does not support the video tag.
 
 <!-- begin draft lines -->
 
-<svg xmlns="http://www.w3.org/2000/svg" width="2" height="1080" viewBox="0 0 2 1080" class="svg-v-1">
+<svg xmlns="http://www.w3.org/2000/svg" width="2" height="1080" viewBox="0 0 2 1080" class="d-none svg-v-1">
   <line data-name="Line V 1" y2=800 transform="translate(1)" fill="none" stroke="#D1D3D4" stroke-width="1"/>
 </svg>
 
-<svg xmlns="http://www.w3.org/2000/svg" width="2" height="1080" viewBox="0 0 2 1080" class="svg-v-2">
+<svg xmlns="http://www.w3.org/2000/svg" width="2" height="1080" viewBox="0 0 2 1080" class="d-none svg-v-2">
   <line data-name="Line V 1" y2=800 transform="translate(1)" fill="none" stroke="#D1D3D4" stroke-width="1"/>
 </svg>
 
-<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1920 2" class="svg-h-1">
+<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1920 2" class="d-none svg-h-1">
   <line data-name="Line 1" x2="1920" transform="translate(0 1)" fill="none" stroke="#D1D3D4" stroke-width="1" id="line1"/>
 </svg>
 
-<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1920 2" class="svg-h-2">
+<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1920 2" class="d-none svg-h-2">
   <line data-name="Line 1" x2="1920" transform="translate(0 1)" fill="none" stroke="#D1D3D4" stroke-width="1" id="line2"/>
 </svg>
 
 <!-- end draft lines -->
 
-<div class="image-container col-12">
-<img src="assets/images/evolution.png" alt="outdoor patio space with view of pittsburgh in the background" class="col-12">
-</div>
 
-<div class="copy-container col-10 offset-1">
-  <h2 class="col-10 offset-1">THE EVOLUTION
+
+
+  <h2 class="col-10 offset-1">REDEFINING
     <br>
-<span class="green-underline">OF OFFICE</span></h2>
+    WORKPLACE
+<span class="green-underline">EXPERIENCE</span></h2>
+<div class="copy-container col-12">
 <p class="col-10 offset-1">
-Sometimes the best way to transform an industry is to create your own. Our approach is informed by human values—namely, a desire for health and happiness—and adheres to the principle that commercial real estate creates a framework for life.
-  </p>
+  Today’s brightest minds have increasingly realized that the environment in which they work is nearly as important as the job itself. Flocking to organizations that both satisfy the needs they have when they’re in the workplace and align with their lives.
+</p>
+
+<p class="col-10 offset-1">
+  This evolution has become the primary motive of how happy, productive, and fulfilled employees feel in their workplace, playing a role in both organizational culture and an organization’s fiscal success.
+</p>
+
   </div>
+
+  <a href="#" class="link-green col-10 offset-1">OUR PROMISE</a>
 </section>
 
 
@@ -102,49 +109,46 @@ Sometimes the best way to transform an industry is to create your own. Our appro
 
 
 
+<section class="featured-projects col-12" id="featured-projects">
 
-<section class="col-12" id="container-3">
-<span class="top"></span>
+  <h2 class="col-10 offset-2">FEATURED <br>
+    <span class="orange-underline">PROJECTS</span></h2>
 
-<!-- begin draft lines -->
-
-<svg xmlns="http://www.w3.org/2000/svg" width="2" height="1080" viewBox="0 0 2 1080" class="svg-v-1">
-  <line data-name="Line V 1" y2=800 transform="translate(1)" fill="none" stroke="#D1D3D4" stroke-width="1"/>
-</svg>
-
-<svg xmlns="http://www.w3.org/2000/svg" width="2" height="1080" viewBox="0 0 2 1080" class="svg-v-2">
-  <line data-name="Line V 1" y2=800 transform="translate(1)" fill="none" stroke="#D1D3D4" stroke-width="1"/>
-</svg>
-
-<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1920 2" class="svg-h-1">
-  <line data-name="Line 1" x2="1920" transform="translate(0 1)" fill="none" stroke="#D1D3D4" stroke-width="1"/>
-</svg>
-
-<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1920 2" class="svg-h-2">
-  <line data-name="Line 1" x2="1920" transform="translate(0 1)" fill="none" stroke="#D1D3D4" stroke-width="1"/>
-</svg>
-
-<!-- end draft lines -->
-
-<div class="image-container col-12">
-<img src="assets/images/elevated.png" alt="outdoor patio space with view of pittsburgh in the background" class="col-12">
+<div class="container-p col-8 col-md-4 col-lg-3 offset-2 float-left">
+  <div class="portfolio-list col-12 float-left">
+    <a href="#">
+      <div class="col-12 p-0 portfolio-image-container">
+  <img src="assets/images/portfolio/beacon.png" alt="#">
+  </div>
+<h3>BEACON I</h3>
+</a>
+</div>
 </div>
 
-<div class="copy-container col-10 offset-1">
-  <h2 class="col-10 offset-1">ELEVATED
-    <br>
-<span class="green-underline">EXPERIENCE</span></h2>
-<p class="col-10 offset-1">
-Enriching experiences that keep people’s minds fresh and sharp, providing them with a healthier, safer, and more stimulating stage upon which to play out their lives.
-</p>
-  </div>
-</section>
+
+<div class="container-p col-8 col-md-4 col-lg-3 offset-2 float-left">
+<div class="portfolio-list col-12 float-left">
+  <a href="#">
+    <div class="col-12 p-0 portfolio-image-container">
+<img src="assets/images/portfolio/bentley.png" alt="#">
+</div>
+<h3>BENTLEY</h3>
+</a>
+</div>
+</div>
+
+<div class="container-p col-8 col-md-4 col-lg-3 offset-2 float-left">
+<div class="portfolio-list col-12 float-left">
+  <a href="#">
+    <div class="col-12 p-0 portfolio-image-container">
+<img src="assets/images/portfolio/boardwalk.png" alt="#">
+</div>
+<h3>BOARDWALK</h3>
+</a>
+</div>
+</div>
 
 
-
-<section class="col-12 p-0">
-<object class="col-12 p-0" data="push-2.html" id="cover-2">
-</object>
 </section>
 
 
