--- a/who-we-are.html
+++ b/who-we-are.html
@@ -40,8 +40,8 @@
             </ul>
 
           </nav>
-
-<div class="col-12 p-0">
+          
+<div class="scroll-container col-12 p-0">
       <section class="col-12" id="container-1">
         <span class="top"></span>
 
@@ -51,7 +51,7 @@
 Your browser does not support the video tag.
 </video>
 
-<h1 class="col-10 offset-1">A Luxury Real Estate Firm</h1>
+<h1 class="col-10 offset-1">WE ARE MARKET MAKERS</h1>
         </section>
 
 
@@ -61,72 +61,58 @@ Your browser does not support the video tag.
 
 <!-- begin draft lines -->
 
-<svg xmlns="http://www.w3.org/2000/svg" width="2" height="1080" viewBox="0 0 2 1080" class="svg-v-1">
+<svg xmlns="http://www.w3.org/2000/svg" width="2" height="1080" viewBox="0 0 2 1080" class="svg-v-1 d-none">
   <line data-name="Line V 1" y2=800 transform="translate(1)" fill="none" stroke="#D1D3D4" stroke-width="1"/>
 </svg>
 
-<svg xmlns="http://www.w3.org/2000/svg" width="2" height="1080" viewBox="0 0 2 1080" class="svg-v-2">
+<svg xmlns="http://www.w3.org/2000/svg" width="2" height="1080" viewBox="0 0 2 1080" class="svg-v-2 d-none">
   <line data-name="Line V 1" y2=800 transform="translate(1)" fill="none" stroke="#D1D3D4" stroke-width="1"/>
 </svg>
 
-<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1920 2" class="svg-h-1">
+<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1920 2" class="svg-h-1 d-none">
   <line data-name="Line 1" x2="1920" transform="translate(0 1)" fill="none" stroke="#D1D3D4" stroke-width="1" id="line1"/>
 </svg>
 
-<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1920 2" class="svg-h-2">
+<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1920 2" class="svg-h-2 d-none">
   <line data-name="Line 1" x2="1920" transform="translate(0 1)" fill="none" stroke="#D1D3D4" stroke-width="1" id="line2"/>
 </svg>
 
 <!-- end draft lines -->
 
-<div class="image-container col-12">
-<img src="assets/images/bold.png" alt="outdoor patio space with view of pittsburgh in the background" class="col-12">
-</div>
 
-<div class="copy-container col-10 offset-1">
-  <h2 class="col-10 offset-1">WE ARE
+  <h2 class="col-10 offset-1">TO GET AHEAD <br>YOU MUST
     <br>
-<span class="green-giant">BOLD</span></h2>
-<h3 class="col-10 offset-1">We dare create the future of commercial real estate.</h3>
-<a href="#" class="link-green col-10 offset-1">PROJECTS</a>
+
+<span class="green-underline">LOOK AHEAD</span></h2>
+
+<div class="copy-container col-12">
+<p class="col-10 offset-1">
+We were born in 1956 in a Bon Air garage when two roofers envisioned a better future. They got down off the roof, built a team, built trust and built a business. The entrepreneurial mindset of Duke & John is present in everything we do.
+</p>
+
+<p class="col-10 offset-1" id="left-align">
+  We risk more than others think is safe.
+<br>
+  We care more than others think is wise.
+<br>
+  We expect more than others think is possible.
+<br>
+  We don’t predict the future; we WILL create it.
+</p>
+
   </div>
+
 </section>
 
-<section class="col-12" id="container-3">
-<span class="top"></span>
 
-<!-- begin draft lines -->
 
-<svg xmlns="http://www.w3.org/2000/svg" width="2" height="1080" viewBox="0 0 2 1080" class="svg-v-1">
-  <line data-name="Line V 1" y2=800 transform="translate(1)" fill="none" stroke="#D1D3D4" stroke-width="1"/>
-</svg>
+<section class="col-12 p-0">
+<embed class="col-12 p-0" src="push-2.html" id="cover-1">
 
-<svg xmlns="http://www.w3.org/2000/svg" width="2" height="1080" viewBox="0 0 2 1080" class="svg-v-2">
-  <line data-name="Line V 1" y2=800 transform="translate(1)" fill="none" stroke="#D1D3D4" stroke-width="1"/>
-</svg>
-
-<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1920 2" class="svg-h-1">
-  <line data-name="Line 1" x2="1920" transform="translate(0 1)" fill="none" stroke="#D1D3D4" stroke-width="1"/>
-</svg>
-
-<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1920 2" class="svg-h-2">
-  <line data-name="Line 1" x2="1920" transform="translate(0 1)" fill="none" stroke="#D1D3D4" stroke-width="1"/>
-</svg>
-
-<!-- end draft lines -->
-
-<div class="image-container col-12">
-<img src="assets/images/real.png" alt="outdoor patio space with view of pittsburgh in the background" class="col-12">
-</div>
-
-<div class="copy-container col-10 offset-1">
-  <h2 class="col-10 offset-1">WE ARE
-    <br>
-<span class="turquoise-giant">REAL</span></h2>
-<h3 class="col-10 offset-1">We are our only benchmark.</h3>
-<a href="#" class="link-turquoise col-10 offset-1">CULTURE</a>
-  </div>
 </section>
+
+
+
 
 <section class="col-12" id="container-4">
 <span class="top"></span>
