--- a/index.html
+++ b/index.html
@@ -111,39 +111,37 @@ Your browser does not support the video tag.
 
 <section class="featured-projects col-12" id="featured-projects">
 
-  <h2 class="col-10 offset-2">FEATURED <br>
-    <span class="orange-underline">PROJECTS</span></h2>
 
-<div class="container-p col-8 col-md-4 col-lg-3 offset-2 float-left">
+<div class="container-p col-10 col-md-4 col-lg-3 offset-1 float-left">
   <div class="portfolio-list col-12 float-left">
     <a href="#">
       <div class="col-12 p-0 portfolio-image-container">
-  <img src="assets/images/portfolio/beacon.png" alt="#">
+  <img src="assets/images/portfolio/riviera.png" alt="#">
   </div>
-<h3>BEACON I</h3>
+<h3>RIVIERA</h3>
 </a>
 </div>
 </div>
 
 
-<div class="container-p col-8 col-md-4 col-lg-3 offset-2 float-left">
+<div class="container-p col-10 col-md-4 col-lg-3 offset-1 float-left">
 <div class="portfolio-list col-12 float-left">
   <a href="#">
     <div class="col-12 p-0 portfolio-image-container">
-<img src="assets/images/portfolio/bentley.png" alt="#">
+<img src="assets/images/portfolio/visionedit.png" alt="#">
 </div>
-<h3>BENTLEY</h3>
+<h3>THE VISION</h3>
 </a>
 </div>
 </div>
 
-<div class="container-p col-8 col-md-4 col-lg-3 offset-2 float-left">
+<div class="container-p col-10 col-md-4 col-lg-3 offset-1 float-left">
 <div class="portfolio-list col-12 float-left">
   <a href="#">
     <div class="col-12 p-0 portfolio-image-container">
-<img src="assets/images/portfolio/boardwalk.png" alt="#">
+<img src="assets/images/portfolio/diamond.png" alt="#">
 </div>
-<h3>BOARDWALK</h3>
+<h3>DIAMOND RIDGE</h3>
 </a>
 </div>
 </div>
