--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 Your browser does not support the video tag.
 </video>
 
-<h1 class="col-10 offset-1">A Luxury Real Estate Firm</h1>
+<h1 class="col-10 offset-1">Shaping spaces while shaping lives.</h1>
         </section>
 
 
