--- a/who-we-are.html
+++ b/who-we-are.html
@@ -40,8 +40,8 @@
             </ul>
 
           </nav>
-          
-<div class="scroll-container col-12 p-0">
+
+<div class="scroll-container col-12 p-0" id="who-we-are">
       <section class="col-12" id="container-1">
         <span class="top"></span>
 
@@ -114,40 +114,34 @@ We were born in 1956 in a Bon Air garage when two roofers envisioned a better fu
 
 
 
-<section class="col-12" id="container-4">
+<section class="col-12 featured">
 <span class="top"></span>
 
-<!-- begin draft lines -->
-
-<svg xmlns="http://www.w3.org/2000/svg" width="2" height="1080" viewBox="0 0 2 1080" class="svg-v-1">
-  <line data-name="Line V 1" y2=800 transform="translate(1)" fill="none" stroke="#D1D3D4" stroke-width="1"/>
-</svg>
-
-<svg xmlns="http://www.w3.org/2000/svg" width="2" height="1080" viewBox="0 0 2 1080" class="svg-v-2">
-  <line data-name="Line V 1" y2=800 transform="translate(1)" fill="none" stroke="#D1D3D4" stroke-width="1"/>
-</svg>
-
-<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1920 2" class="svg-h-1">
-  <line data-name="Line 1" x2="1920" transform="translate(0 1)" fill="none" stroke="#D1D3D4" stroke-width="1"/>
-</svg>
-
-<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1920 2" class="svg-h-2">
-  <line data-name="Line 1" x2="1920" transform="translate(0 1)" fill="none" stroke="#D1D3D4" stroke-width="1"/>
-</svg>
-
-<!-- end draft lines -->
-
-<div class="image-container col-12">
-<img src="assets/images/unparalleled-luxe.png" alt="outdoor patio space with view of pittsburgh in the background" class="col-12">
+<div class="container-p col-10 offset-1">
+<div class="animated-container col-10 offset-1">
+  <h2 class="col-10 offset-1">WE ARE
+    <br>
+<span class="green-giant">BOLD</span></h2>
+</div>
 </div>
 
-<div class="copy-container col-10 offset-1">
+
+<div class="container-p col-10 offset-1">
+<div class="animated-container col-10 offset-1">
+  <h2 class="col-10 offset-1">WE ARE
+    <br>
+<span class="turquoise-giant">REAL</span></h2>
+</div>
+</div>
+
+<div class="container-p col-10 offset-1">
+<div class="animated-container col-10 offset-1">
   <h2 class="col-10 offset-1">WE ARE
     <br>
 <span class="orange-giant">LUXE</span></h2>
-<h3 class="col-10 offset-1">We make timeless luxury a daily experience.</h3>
-<a href="#" class="link-orange col-10 offset-1">PORTFOLIO</a>
-  </div>
+</div>
+</div>
+
 </section>
 
 
