--- a/who-we-are.html
+++ b/who-we-are.html
@@ -117,8 +117,13 @@ We were born in 1956 in a Bon Air garage when two roofers envisioned a better fu
 <section class="col-12 featured">
 <span class="top"></span>
 
+
 <div class="container-p col-10 offset-1">
+
 <div class="animated-container col-10 offset-1">
+  <div class="text-reveal green-bg">
+    <h3>We dare create the future of commercial real estate.</h3>
+  </div>
   <h2 class="col-10 offset-1">WE ARE
     <br>
 <span class="green-giant">BOLD</span></h2>
@@ -128,6 +133,9 @@ We were born in 1956 in a Bon Air garage when two roofers envisioned a better fu
 
 <div class="container-p col-10 offset-1">
 <div class="animated-container col-10 offset-1">
+  <div class="text-reveal turquoise-bg">
+    <h3>We are our only benchmark.</h3>
+  </div>
   <h2 class="col-10 offset-1">WE ARE
     <br>
 <span class="turquoise-giant">REAL</span></h2>
@@ -136,6 +144,9 @@ We were born in 1956 in a Bon Air garage when two roofers envisioned a better fu
 
 <div class="container-p col-10 offset-1">
 <div class="animated-container col-10 offset-1">
+  <div class="text-reveal orange-bg">
+    <h3>We make timeless luxury a daily experience.</h3>
+  </div>
   <h2 class="col-10 offset-1">WE ARE
     <br>
 <span class="orange-giant">LUXE</span></h2>
