--- a/index.html
+++ b/index.html
@@ -17,11 +17,14 @@
 
 
 
-        <div class="logo-container col-6 col-md-4 col-lg-2 offset-3 offset-md-4 offset-lg-0 float-left">
-      <a href="index.html" class="col-12 float-left p-0"><img src="assets/logo.svg" alt="Burns Scalo logo to home page" class="col-12 float-left"></a>
-      </div>
+        <div class="logo-container col-1 col-md-4 col-lg-2 offset-lg-3 offset-md-4 offset-lg-0 float-left">
+      <a href="index.html" class="col-12 float-left p-0"><img src="assets/mark.svg" alt="Burns Scalo logo to home page" class="col-12 float-left"></a>
+      <a href="index.html" class="d-none d-md-2 col-12 float-left p-0"><img src="assets/logo.svg" alt="Burns Scalo logo to home page" class="col-12 float-left"></a>
+  </div>
+      <h5 class="col-8">A Luxury Real Estate Firm</h5>
 
-      <div class="menu-container col-1 offset-2 offset-md-3 d-lg-none">
+
+      <div class="menu-container col-1 offset-1 offset-md-3 d-lg-none">
       <a onclick="myFunction()" class="col-12 float-left"><img src="assets/menu.svg" alt="Dropdown Menu" class="dropdown-menu-custom"></a>
       </div>
 
@@ -51,7 +54,7 @@
 Your browser does not support the video tag.
 </video>
 
-<h1 class="col-10 offset-1">Shaping spaces while shaping lives.</h1>
+<h1 class="col-10 offset-1">Shaping spaces while shaping <span class="green-underline">lives.</span></h1>
         </section>
 
 
