--- a/portfolio.html
+++ b/portfolio.html
@@ -17,11 +17,14 @@
 
 
 
-      <div class="logo-container col-6 col-md-4 offset-3 offset-md-4 float-left">
-    <a href="index.html" class="col-12 float-left p-0"><img src="assets/logo.svg" alt="Burns Scalo logo to home page" class="col-12 float-left"></a>
-    </div>
+      <div class="logo-container col-1 col-md-4 col-lg-2 offset-lg-3 offset-md-4 offset-lg-0 float-left">
+    <a href="index.html" class="col-12 float-left p-0"><img src="assets/mark.svg" alt="Burns Scalo logo to home page" class="col-12 float-left"></a>
+    <a href="index.html" class="d-none d-md-2 col-12 float-left p-0"><img src="assets/logo.svg" alt="Burns Scalo logo to home page" class="col-12 float-left"></a>
+</div>
+    <h5 class="col-8">A Luxury Real Estate Firm</h5>
 
-    <div class="menu-container col-1 offset-2 offset-md-3">
+
+    <div class="menu-container col-1 offset-1 offset-md-3 d-lg-none">
     <a onclick="myFunction()" class="col-12 float-left"><img src="assets/menu.svg" alt="Dropdown Menu" class="dropdown-menu-custom"></a>
     </div>
 
@@ -76,7 +79,7 @@
 
             <section class="col-12 col-lg-9 float-left">
 
-            <div class="container-p col-6 col-md-4 col-lg-3 float-left">
+            <div class="container-p col-12 col-md-4 col-lg-3 float-left">
               <div class="portfolio-list col-12 float-left">
                 <a href="#">
                   <div class="col-12 p-0 portfolio-image-container">
@@ -89,7 +92,7 @@
             </div>
 
 
-            <div class="container-p col-6 col-md-4 col-lg-3 float-left">
+            <div class="container-p col-12 col-md-4 col-lg-3 float-left">
             <div class="portfolio-list col-12 float-left">
               <a href="#">
                 <div class="col-12 p-0 portfolio-image-container">
@@ -101,7 +104,7 @@
             </div>
             </div>
 
-            <div class="container-p col-6 col-md-4 col-lg-3 float-left">
+            <div class="container-p col-12 col-md-4 col-lg-3 float-left">
             <div class="portfolio-list col-12 float-left">
               <a href="#">
                 <div class="col-12 p-0 portfolio-image-container">
@@ -116,7 +119,7 @@
 
 
 
-            <div class="container-p col-6 col-md-4 col-lg-3 float-left">
+            <div class="container-p col-12 col-md-4 col-lg-3 float-left">
             <div class="portfolio-list col-12 float-left">
               <a href="#">
                 <div class="col-12 p-0 portfolio-image-container">
@@ -128,7 +131,7 @@
             </div>
             </div>
 
-            <div class="container-p col-6 col-md-4 col-lg-3 float-left">
+            <div class="container-p col-12 col-md-4 col-lg-3 float-left">
             <div class="portfolio-list col-12 float-left">
               <a href="#">
                 <div class="col-12 p-0 portfolio-image-container">
@@ -140,7 +143,7 @@
             </div>
             </div>
 
-            <div class="container-p col-6 col-md-4 col-lg-3 float-left">
+            <div class="container-p col-12 col-md-4 col-lg-3 float-left">
             <div class="portfolio-list col-12 float-left">
               <a href="#">
                 <div class="col-12 p-0 portfolio-image-container">
@@ -152,7 +155,7 @@
             </div>
             </div>
 
-            <div class="container-p col-6 col-md-4 col-lg-3 float-left">
+            <div class="container-p col-12 col-md-4 col-lg-3 float-left">
             <div class="portfolio-list col-12 float-left">
               <a href="#">
                 <div class="col-12 p-0 portfolio-image-container">
@@ -164,7 +167,7 @@
             </div>
             </div>
 
-            <div class="container-p col-6 col-md-4 col-lg-3 float-left">
+            <div class="container-p col-12 col-md-4 col-lg-3 float-left">
             <div class="portfolio-list col-12 float-left">
               <a href="#">
                 <div class="col-12 p-0 portfolio-image-container">
