--- a/who-we-are.html
+++ b/who-we-are.html
@@ -54,7 +54,7 @@
 Your browser does not support the video tag.
 </video>
 
-<h1 class="col-10 offset-1">WE ARE MARKET MAKERS</h1>
+<h1 class="col-10 offset-1">WE ARE MARKET <span class="turquoise-underline">MAKERS</span></h1>
         </section>
 
 
