--- a/what-we-do.html
+++ b/what-we-do.html
@@ -54,7 +54,7 @@
 Your browser does not support the video tag.
 </video>
 
-<h1 class="col-10 offset-1">A Luxury Real Estate Firm</h1>
+<h1 class="col-10 offset-1">WE ARE MARKET <span class="orange-underline">MAKERS</span></h1>
         </section>
 
 
