--- a/push-1.html
+++ b/push-1.html
@@ -28,14 +28,16 @@
 
   <div class="reveal-container col-10 col-lg-3 offset-1">
   <h2 class="col-12">
-UNPARALLELED <br><span class="turquoise-underline">LUXURY</span>
+CREATING COMMUNITY<br><span class="turquoise-underline">& CULTURE</span>
     </h2>
     <p class="col-12">
-For those who seek the ultimate form of design, refinement and luxury, look no further than the Burns Scalo Real Estate.
+      The workplace provides a sense of community that technology cannot replace. Communities materialize when spaces are designed based on the perceptions and expectations of the workforce as well as the purpose of an organization – creating culture – is the backbone of any successful organization.
+    </p>
+        <p class="col-12">
+      Create the kind of workplace and company culture that will attract and retain great talent. Your people and your bottom line will thank you.
       </p>
 
 </div>
-        <a href="portfolio.html" class="copy-link-turquoise offset-1">SEE OUR WORK</a>
       </section>
 
       <script>
