--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 Your browser does not support the video tag.
 </video>
 
-<h1 class="col-10 offset-1">Shaping spaces while shaping <span class="green-underline">lives.</span></h1>
+<h1 class="col-10 offset-1">Shaping spaces that <br><span class="green-underline">shape lives.</span></h1>
         </section>
 
 
