--- a/what-we-do.html
+++ b/what-we-do.html
@@ -44,7 +44,7 @@
 
           </nav>
 
-<div class="col-12 p-0" id="what-we-do">
+<div class="scroll-container col-12 p-0" id="what-we-do">
       <section class="col-12" id="container-1">
         <span class="top"></span>
 
@@ -54,132 +54,88 @@
 Your browser does not support the video tag.
 </video>
 
-<h1 class="col-10 offset-1">WE ARE MARKET <span class="orange-underline">MAKERS</span></h1>
+<h1 class="col-11 offset-1">OUR EXPERIENCE YOUR<br><span class="orange-underline">FUTURE</span></h1>
         </section>
 
 
 
 <section class="col-12" id="container-2">
-<span class="top"></span>
 
-<!-- begin draft lines -->
+  <h2 class="col-10 offset-1">TO GET AHEAD <br>YOU MUST
+    <br>
+<span class="green-underline">LOOK AHEAD</span></h2>
 
-<svg xmlns="http://www.w3.org/2000/svg" width="2" height="1080" viewBox="0 0 2 1080" class="svg-v-1">
-  <line data-name="Line V 1" y2=800 transform="translate(1)" fill="none" stroke="#D1D3D4" stroke-width="1"/>
-</svg>
+<div class="copy-container col-12">
 
-<svg xmlns="http://www.w3.org/2000/svg" width="2" height="1080" viewBox="0 0 2 1080" class="svg-v-2">
-  <line data-name="Line V 1" y2=800 transform="translate(1)" fill="none" stroke="#D1D3D4" stroke-width="1"/>
-</svg>
+<p class="col-10 offset-1">
+As leaders in all industries continue to search for competitive advantages, they continue to overlook the most effective weapon in their arsenal—their workplace. That’s where we come in. We create spaces that people want to come to, not just have to. Dynamic spaces that not only attract today’s brightest talent but also spark motivation, innovation, happiness, and loyalty for years to come.
+</p>
 
-<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1920 2" class="svg-h-1">
-  <line data-name="Line 1" x2="1920" transform="translate(0 1)" fill="none" stroke="#D1D3D4" stroke-width="1" id="line1"/>
-</svg>
-
-<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1920 2" class="svg-h-2">
-  <line data-name="Line 1" x2="1920" transform="translate(0 1)" fill="none" stroke="#D1D3D4" stroke-width="1" id="line2"/>
-</svg>
-
-<!-- end draft lines -->
-
-<div class="image-container col-12">
-<img src="assets/images/bold.png" alt="outdoor patio space with view of pittsburgh in the background" class="col-12">
 </div>
 
-<div class="copy-container col-10 offset-1">
-  <h2 class="col-10 offset-1">BROKERAGE</h2>
-<h3 class="col-10 offset-1">Leasing your investment faster.</h3>
+<div class="col-10 offset-1">
 
-<ul class="col-10 offset-1">
-<li>Landlord & Seller Representation</li>
-<li>Tenant & Buyer Representation</li>
-<li>Site Selection & Acquisition</li>
-</ul>
+  <ul class="services-list col-12">
+    <li class="col-12"><a href="#">BROKERAGE</a></li>
+    <li class="col-12"><a href="#">DEVELOPMENT</a></li>
+    <li class="col-12"><a href="#">MANAGEMENT</a></li>
+  </ul>
 
-  </div>
+</div>
 </section>
 
-<section class="col-12" id="container-3">
-<span class="top"></span>
+<section class="col-12 p-0">
+<embed class="col-12 p-0" src="push-3.html" id="cover-1">
 
-<!-- begin draft lines -->
+</section>
 
-<svg xmlns="http://www.w3.org/2000/svg" width="2" height="1080" viewBox="0 0 2 1080" class="svg-v-1">
-  <line data-name="Line V 1" y2=800 transform="translate(1)" fill="none" stroke="#D1D3D4" stroke-width="1"/>
-</svg>
 
-<svg xmlns="http://www.w3.org/2000/svg" width="2" height="1080" viewBox="0 0 2 1080" class="svg-v-2">
-  <line data-name="Line V 1" y2=800 transform="translate(1)" fill="none" stroke="#D1D3D4" stroke-width="1"/>
-</svg>
 
-<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1920 2" class="svg-h-1">
-  <line data-name="Line 1" x2="1920" transform="translate(0 1)" fill="none" stroke="#D1D3D4" stroke-width="1"/>
-</svg>
 
-<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1920 2" class="svg-h-2">
-  <line data-name="Line 1" x2="1920" transform="translate(0 1)" fill="none" stroke="#D1D3D4" stroke-width="1"/>
-</svg>
+<section class="featured-projects col-12" id="featured-projects">
 
-<!-- end draft lines -->
 
-<div class="image-container col-12">
-<img src="assets/images/development.png" alt="outdoor patio space with view of pittsburgh in the background" class="col-12">
+<div class="container-p col-10 col-md-4 col-lg-3 offset-1 float-left">
+  <div class="portfolio-list col-12 float-left">
+    <a href="#">
+      <div class="col-12 p-0 portfolio-image-container">
+  <img src="assets/images/testimonials/rice.png" alt="#">
+  </div>
+<h3>Toby Rice</h3>
+</a>
+</div>
 </div>
 
-<div class="copy-container col-10 offset-1">
-  <h2 class="col-10 offset-1">DEVELOPMENT</h2>
-<h3 class="col-10 offset-1">Your partner in premier office development.</h3>
 
-<ul class="col-10 offset-1">
-<li>General Contracting</li>
-<li>Project Oversight</li>
-<li>Sustainable Development</li>
-<li>Tenant Coordination</li>
-</ul>
-
-  </div>
-</section>
-
-<section class="col-12" id="container-4">
-<span class="top"></span>
-
-<!-- begin draft lines -->
-
-<svg xmlns="http://www.w3.org/2000/svg" width="2" height="1080" viewBox="0 0 2 1080" class="svg-v-1">
-  <line data-name="Line V 1" y2=800 transform="translate(1)" fill="none" stroke="#D1D3D4" stroke-width="1"/>
-</svg>
-
-<svg xmlns="http://www.w3.org/2000/svg" width="2" height="1080" viewBox="0 0 2 1080" class="svg-v-2">
-  <line data-name="Line V 1" y2=800 transform="translate(1)" fill="none" stroke="#D1D3D4" stroke-width="1"/>
-</svg>
-
-<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1920 2" class="svg-h-1">
-  <line data-name="Line 1" x2="1920" transform="translate(0 1)" fill="none" stroke="#D1D3D4" stroke-width="1"/>
-</svg>
-
-<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1920 2" class="svg-h-2">
-  <line data-name="Line 1" x2="1920" transform="translate(0 1)" fill="none" stroke="#D1D3D4" stroke-width="1"/>
-</svg>
-
-<!-- end draft lines -->
-
-<div class="image-container col-12">
-<img src="assets/images/management.png" alt="outdoor patio space with view of pittsburgh in the background" class="col-12">
+<div class="container-p col-10 col-md-4 col-lg-3 offset-1 float-left">
+<div class="portfolio-list col-12 float-left">
+  <a href="#">
+    <div class="col-12 p-0 portfolio-image-container">
+<img src="assets/images/testimonials/waldron.png" alt="#">
+</div>
+<h3>John Waldron</h3>
+</a>
+</div>
 </div>
 
-<div class="copy-container col-10 offset-1">
-  <h2 class="col-10 offset-1">MANAGEMENT</h2>
-<h3 class="col-10 offset-1">Delivering productivity & profitability.</h3>
+<div class="container-p col-10 col-md-4 col-lg-3 offset-1 float-left">
+<div class="portfolio-list col-12 float-left">
+  <a href="#">
+    <div class="col-12 p-0 portfolio-image-container">
+<img src="assets/images/testimonials/fleck.png" alt="#">
+</div>
+<h3>Steve Fleck</h3>
+</a>
+</div>
+</div>
 
-<ul class="col-10 offset-1">
-<li>Client Experience Services</li>
-<li>Building Maintenance</li>
-<li>Porter Services</li>
-<li>Capital Improvement Plans</li>
-</ul>
 
-  </div>
 </section>
+
+
+
+
+
 
 
 
