--- a/portfolio.html
+++ b/portfolio.html
@@ -81,7 +81,7 @@
 
             <div class="container-p col-12 col-md-4 col-lg-3 float-left">
               <div class="portfolio-list col-12 float-left">
-                <a href="#">
+                <a href="portfolio-beacon.html">
                   <div class="col-12 p-0 portfolio-image-container">
               <img src="assets/images/portfolio/beacon.png" alt="#">
               </div>
