--- a/portfolio-beacon.html
+++ b/portfolio-beacon.html
@@ -71,6 +71,8 @@ Your browser does not support the video tag.
     <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
     <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
     <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3" aria-label="Slide 4"></button>
+    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="4" aria-label="Slide 5"></button>
   </div>
   <div class="carousel-inner">
     <div class="carousel-item active">
@@ -80,7 +82,10 @@ Your browser does not support the video tag.
       <img src="assets/images/portfolio/beacon/waldron-2.png" class="d-block w-100" alt="...">
     </div>
     <div class="carousel-item">
-      <img src="assets/images/portfolio/beacon/waldron-1.png" class="d-block w-100" alt="...">
+      <img src="assets/images/portfolio/beacon/alpha-1.png" class="d-block w-100" alt="...">
+    </div>
+    <div class="carousel-item">
+      <img src="assets/images/portfolio/beacon/alpha-2.png" class="d-block w-100" alt="...">
     </div>
   </div>
   <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"  data-bs-slide="prev">
