--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
       <section class="col-12" id="container-1">
         <span class="top"></span>
 
-        <video muted autoplay playsinline class="video-background">
-<source src="assets/videos/home2.mp4" type="video/mp4">
+        <video muted autoplay playsinline class="video-background" id="home-hero">
+<source src="assets/videos/hero.mp4" type="video/mp4">
 <source src="movie.ogg" type="video/ogg">
 Your browser does not support the video tag.
 </video>
@@ -100,16 +100,27 @@ Your browser does not support the video tag.
 
   </div>
 
-  <a href="#" class="link-green col-10 offset-1">OUR PROMISE</a>
+  <a href="#" class="link-outline col-10 offset-1">OUR PROMISE</a>
 </section>
 
 
 
-<section class="col-12 p-0">
+<section class="col-12 p-0 d-none d-lg-block">
 <embed class="col-12 p-0" src="push-1.html" id="cover-1">
+</section>
+
+
+<section class="zoom-1 col-12 p-0" id="push-1-mobile">
+<img src="assets/images/community.svg" alt="#">
+
 
 </section>
 
+
+
+<section class="col-12 p-0" id="push-1-pt2-mobile">
+
+</section>
 
 
 <section class="featured-projects col-12" id="featured-projects">
