--- a/who-we-are.html
+++ b/who-we-are.html
@@ -102,7 +102,7 @@ We were born in 1956 in a Bon Air garage when two roofers envisioned a better fu
 <span class="top"></span>
 
 
-<div class="container-p col-10 offset-1">
+<div class="container-p col-12">
 
 <div class="animated-container col-10 offset-1">
   <div class="text-reveal green-bg">
@@ -115,7 +115,7 @@ We were born in 1956 in a Bon Air garage when two roofers envisioned a better fu
 </div>
 
 
-<div class="container-p col-10 offset-1">
+<div class="container-p col-12">
 <div class="animated-container col-10 offset-1">
   <div class="text-reveal turquoise-bg">
     <h3>We are our only benchmark.</h3>
@@ -126,7 +126,7 @@ We were born in 1956 in a Bon Air garage when two roofers envisioned a better fu
 </div>
 </div>
 
-<div class="container-p col-10 offset-1">
+<div class="container-p col-12">
 <div class="animated-container col-10 offset-1">
   <div class="text-reveal orange-bg">
     <h3>We make timeless luxury a daily experience.</h3>
@@ -145,7 +145,7 @@ We were born in 1956 in a Bon Air garage when two roofers envisioned a better fu
 
 
 
-        </div><!-- CLOSES SCROLL CONTAINER -->
+<section class="col-12">
 
         <footer class="col-12">
           <ul class="col-4 offset-1">
@@ -162,6 +162,8 @@ We were born in 1956 in a Bon Air garage when two roofers envisioned a better fu
               </ul>
 
           </footer>
+</section>
+                </div><!-- CLOSES SCROLL CONTAINER -->
 
 
 <!-- DROPDOWN MENU SCRIPT
