--- a/portfolio-beacon.html
+++ b/portfolio-beacon.html
@@ -32,9 +32,9 @@
 
       <nav class="col-12" id="nav">
         <ul class="main-nav col-10 offset-1">
-          <li class="nav-item-1"><a href="who-we-are.html"><span id="active">WHO WE ARE</span></a></li>
+          <li class="nav-item-1"><a href="who-we-are.html">WHO WE ARE</a></li>
           <li class="nav-item-2"><a href="what-we-do.html">WHAT WE DO</a></li>
-          <li class="nav-item-3"><a href="portfolio.html">PORTFOLIO</a></li>
+          <li class="nav-item-3"><a href="portfolio.html"><span id="active">PORTFOLIO</span></a></li>
           </ul>
 
           <ul class="secondary-nav col-10 offset-1">
@@ -49,7 +49,7 @@
         <span class="top"></span>
 
         <video muted autoplay playsinline class="video-background">
-<source src="assets/videos/who-we-are.mp4" type="video/mp4">
+<source src="assets/videos/portfolio/beacon/beacon-hero.mp4" type="video/mp4">
 <source src="movie.ogg" type="video/ogg">
 Your browser does not support the video tag.
 </video>
@@ -73,20 +73,42 @@ Your browser does not support the video tag.
     <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
     <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3" aria-label="Slide 4"></button>
     <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="4" aria-label="Slide 5"></button>
+    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="5" aria-label="Slide 6"></button>
   </div>
   <div class="carousel-inner">
+
     <div class="carousel-item active">
       <img src="assets/images/portfolio/beacon/waldron-1.png" class="d-block w-100" alt="...">
     </div>
+
     <div class="carousel-item">
       <img src="assets/images/portfolio/beacon/waldron-2.png" class="d-block w-100" alt="...">
     </div>
+
     <div class="carousel-item">
       <img src="assets/images/portfolio/beacon/alpha-1.png" class="d-block w-100" alt="...">
     </div>
+
     <div class="carousel-item">
       <img src="assets/images/portfolio/beacon/alpha-2.png" class="d-block w-100" alt="...">
     </div>
+
+    <div class="carousel-item">
+      <img src="assets/images/portfolio/beacon/alpha-3.png" class="d-block w-100" alt="...">
+    </div>
+
+    <div class="carousel-item">
+      <img src="assets/images/portfolio/beacon/careform-1.png" class="d-block w-100" alt="...">
+    </div>
+
+    <div class="carousel-item">
+      <img src="assets/images/portfolio/beacon/careform-2.png" class="d-block w-100" alt="...">
+    </div>
+
+
+
+
+
   </div>
   <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"  data-bs-slide="prev">
     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -125,56 +147,6 @@ Beacon I is the first Class-A office development inside Abele Business Park. Its
 </div>
 
 
-
-</section>
-
-
-
-<section class="col-12 p-0">
-<embed class="col-12 p-0" src="push-2.html" id="cover-1">
-</section>
-
-
-
-
-<section class="col-12 featured">
-<span class="top"></span>
-
-
-<div class="container-p col-10 offset-1">
-
-<div class="animated-container col-10 offset-1">
-  <div class="text-reveal green-bg">
-    <h3>We dare create the future of commercial real estate.</h3>
-  </div>
-  <h2 class="col-10 offset-1">WE ARE
-    <br>
-<span class="green-giant">BOLD</span></h2>
-</div>
-</div>
-
-
-<div class="container-p col-10 offset-1">
-<div class="animated-container col-10 offset-1">
-  <div class="text-reveal turquoise-bg">
-    <h3>We are our only benchmark.</h3>
-  </div>
-  <h2 class="col-10 offset-1">WE ARE
-    <br>
-<span class="turquoise-giant">REAL</span></h2>
-</div>
-</div>
-
-<div class="container-p col-10 offset-1">
-<div class="animated-container col-10 offset-1">
-  <div class="text-reveal orange-bg">
-    <h3>We make timeless luxury a daily experience.</h3>
-  </div>
-  <h2 class="col-10 offset-1">WE ARE
-    <br>
-<span class="orange-giant">LUXE</span></h2>
-</div>
-</div>
 
 </section>
 
