--- a/who-we-are.html
+++ b/who-we-are.html
@@ -84,17 +84,41 @@ We were born in 1956 in a Bon Air garage when two roofers envisioned a better fu
   We don’t predict the future; we WILL create it.
 </p>
 
+  <a href="#" class="link-outline col-10 offset-1">OUR PROMISE</a>
   </div>
 
 </section>
 
 
 
-<section class="col-12 p-0">
+<section class="col-12 p-0 d-none d-lg-block">
 <embed class="col-12 p-0" src="push-2.html" id="cover-1">
 
 </section>
 
+
+<section class="zoom-1 col-12 p-0" id="push-2-mobile">
+<img src="assets/images/community.svg" alt="#">
+</section>
+
+
+<section class="col-12 p-0" id="push-2-pt2-mobile">
+
+  <div class="reveal-container col-10 col-lg-3 offset-1">
+  <h2 class="col-12">
+CREATING COMMUNITY<br><span class="turquoise-underline">& CULTURE</span>
+    </h2>
+
+    <p class="col-12">
+      The workplace provides a sense of community that technology cannot replace. Communities materialize when spaces are designed based on the perceptions and expectations of the workforce as well as the purpose of an organization – creating culture – is the backbone of any successful organization.
+    </p>
+        <p class="col-12">
+      Create the kind of workplace and company culture that will attract and retain great talent. Your people and your bottom line will thank you.
+      </p>
+
+</div>
+
+</section>
 
 
 
