--- a/what-we-do.html
+++ b/what-we-do.html
@@ -95,7 +95,7 @@ As leaders in all industries continue to search for competitive advantages, they
 
 
 <section class="zoom-1 col-12 p-0" id="push-3-mobile">
-<img src="assets/images/community.svg" alt="#">
+<img src="assets/images/push-3.svg" alt="#">
 </section>
 
 
@@ -104,15 +104,11 @@ As leaders in all industries continue to search for competitive advantages, they
 
   <div class="reveal-container col-10 col-lg-3 offset-1">
   <h2 class="col-12">
-CREATING COMMUNITY<br><span class="turquoise-underline">& CULTURE</span>
+BUILDING<br><span class="turquoise-underline">INSPIRATION</span>
     </h2>
 
     <p class="col-12">
-      The workplace provides a sense of community that technology cannot replace. Communities materialize when spaces are designed based on the perceptions and expectations of the workforce as well as the purpose of an organization – creating culture – is the backbone of any successful organization.
-    </p>
-        <p class="col-12">
-      Create the kind of workplace and company culture that will attract and retain great talent. Your people and your bottom line will thank you.
-      </p>
+We elevate the workplace to be more reactive to peoples’ expectations of how things can be smarter and more efficient. We demonstrate this through beautifully designed, highly-curated experiential workplaces that inspire people
 
 </div>
 
