--- a/who-we-are.html
+++ b/who-we-are.html
@@ -84,7 +84,9 @@ We were born in 1956 in a Bon Air garage when two roofers envisioned a better fu
   We don’t predict the future; we WILL create it.
 </p>
 
-  <a href="#" class="link-outline col-10 offset-1">OUR PROMISE</a>
+  <a href="#" class="link-outline col-10 offset-1">OUR PROMISE
+<img src="assets/arrow.svg" alt="#">
+  </a>
   </div>
 
 </section>
