--- a/index.html
+++ b/index.html
@@ -100,7 +100,9 @@ Your browser does not support the video tag.
 
   </div>
 
-  <a href="#" class="link-outline col-10 offset-1">OUR PROMISE</a>
+  <a href="#" class="link-outline col-10 offset-1"><p class="col-10">OUR PROMISE</p>
+  <img src="assets/arrow.svg" alt="#" class="col-2">
+  </a>
 </section>
 
 
