--- a/portfolio-riviera.html
+++ b/portfolio-riviera.html
@@ -54,7 +54,7 @@
 Your browser does not support the video tag.
 </video>
 
-<h1 class="col-10 offset-1"><span class="turquoise-underline">BEACON I</span></h1>
+<h1 class="col-10 offset-1"><span class="turquoise-underline">THE RIVIERA</span></h1>
         </section>
 
 
@@ -74,6 +74,7 @@ Your browser does not support the video tag.
     <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3" aria-label="Slide 4"></button>
     <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="4" aria-label="Slide 5"></button>
     <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="5" aria-label="Slide 6"></button>
+    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="6" aria-label="Slide 7"></button>
   </div>
   <div class="carousel-inner">
 
@@ -126,12 +127,13 @@ Your browser does not support the video tag.
 
   <h2 class="col-10 offset-1">SOUTH<br>
 
-<span class="green-underline">FAYETTE</span></h2>
+<span class="green-underline">OAKLAND</span></h2>
 <h3 class="col-12 offset-1">80,000 SF</h3>
 
 
 <p class="col-10 offset-1 d-none d-lg-block">
-Beacon I is the first Class-A office development inside Abele Business Park. Its 80,000 square-feet are wrapped in floor-to-ceiling glass windows and topped with solar panels, making Beacon I an exquisite combination of modern design and innovative function in office space. Tenants enjoy outdoor meeting areas, natural walking trails with fitness stations and proximity to The Piazza for lunch, and TopGolf for some happy hour fun. The project was completed in March 2018.
+
+  This 6-floor, 160,000 square-foot gem of the Pittsburgh Technology Center is the Life Sci- ences hub of Pittsburgh Innovation District. Its proximity The University of Pittsburgh and Carnegie Mellon University has attracted some of the world’s innovative and pioneering research minds and organizations.
 </p>
 
 
