--- a/portfolio.html
+++ b/portfolio.html
@@ -94,7 +94,7 @@
 
             <div class="container-p col-12 col-md-4 col-lg-3 float-left">
             <div class="portfolio-list col-12 float-left">
-              <a href="#">
+              <a href="portfolio-riviera.html">
                 <div class="col-12 p-0 portfolio-image-container">
             <img src="assets/images/portfolio/bentley.png" alt="#">
             </div>
@@ -145,7 +145,7 @@
 
             <div class="container-p col-12 col-md-4 col-lg-3 float-left">
             <div class="portfolio-list col-12 float-left">
-              <a href="#">
+              <a href="portfolio-riviera.html">
                 <div class="col-12 p-0 portfolio-image-container">
             <img src="assets/images/portfolio/riviera.png" alt="#">
             </div>
