--- a/push-1.html
+++ b/push-1.html
@@ -28,15 +28,13 @@
 
   <div class="reveal-container col-10 col-lg-3 offset-1">
   <h2 class="col-12">
-CREATING COMMUNITY<br><span class="turquoise-underline">& CULTURE</span>
+WHERE WE'RE<br><span class="turquoise-underline">HEADING</span>
     </h2>
 
     <p class="col-12">
-      The workplace provides a sense of community that technology cannot replace. Communities materialize when spaces are designed based on the perceptions and expectations of the workforce as well as the purpose of an organization – creating culture – is the backbone of any successful organization.
-    </p>
-        <p class="col-12">
-      Create the kind of workplace and company culture that will attract and retain great talent. Your people and your bottom line will thank you.
-      </p>
+Our approach is informed by human values—namely, a desire for health and happiness—and adheres to the principle that the workplace creates a framework for life. We ensure that helpful amenities are always within reach and conceive communities where people can interact. Keeping people’s minds fresh and sharp, while providing them with a stimulating stage to play out their lives.
+  </p>
+
 
 </div>
       </section>
