--- a/push-2.html
+++ b/push-2.html
@@ -25,10 +25,10 @@
 
   <div class="reveal-container col-10 offset-1">
   <h2 class="col-12">
-BUILDING<br><span class="green-underline">INSPIRATION</span>
+WHERE WE'RE<br><span class="green-underline">HEADING</span>
     </h2>
     <p class="col-12">
-We elevate the workplace to be more reactive to peoples’ expectations of how things can be smarter and more efficient. We demonstrate this through beautifully designed, highly-curated experiential workplaces that inspire people.
+      While our success will always be measured by our real estate investments, we will be known for our ability to our people to think and do differently. We risk more than others think is safe.  We care more than others think is wise. We expect more than others think is possible. And, we don’t predict the future; we’ll create it.
       </p>
 
 </div>
