--- a/what-we-do.html
+++ b/what-we-do.html
@@ -54,16 +54,16 @@
 Your browser does not support the video tag.
 </video>
 
-<h1 class="col-11 offset-1">OUR EXPERIENCE YOUR<br><span class="orange-underline">FUTURE</span></h1>
+<h1 class="col-11 offset-1">WE ARE<br>MARKET <br><span class="orange-underline">MAKERS</span></h1>
         </section>
 
 
 
 <section class="col-12" id="container-2">
 
-  <h2 class="col-10 offset-1">TO GET AHEAD <br>YOU MUST
+  <h2 class="col-10 offset-1">DELIVERING
     <br>
-<span class="green-underline">LOOK AHEAD</span></h2>
+<span class="green-underline">LUXURY</span></h2>
 
 <div class="copy-container col-12">
 
