--- a/who-we-are.html
+++ b/who-we-are.html
@@ -54,7 +54,7 @@
 Your browser does not support the video tag.
 </video>
 
-<h1 class="col-10 offset-1">WE ARE MARKET <span class="turquoise-underline">MAKERS</span></h1>
+<h1 class="col-10 offset-1">BUILDING<br><span class="turquoise-underline">THE FUTURE</span></h1>
         </section>
 
 
@@ -64,29 +64,21 @@ Your browser does not support the video tag.
 
 
 
-  <h2 class="col-10 offset-1">TO GET AHEAD <br>YOU MUST
+  <h2 class="col-10 offset-1">WHERE WE
     <br>
 
-<span class="green-underline">LOOK AHEAD</span></h2>
+<span class="green-underline">CAME FROM</span></h2>
 
 <div class="copy-container col-12">
 <p class="col-10 offset-1">
-We were born in 1956 in a Bon Air garage when two roofers envisioned a better future. They got down off the roof, built a team, built trust and built a business. The entrepreneurial mindset of Duke & John is present in everything we do.
+We are inspired by our past, but more motivated by our future. Our identity was born in 1956 in a Bon Air garage when two roofers envisioned a better future. They got down off the roof, built a team, built trust, and built a business. The entrepreneurial mindset of Duke Burns & John Scalo is present in everything we do.
 </p>
+  </div>
 
-<p class="col-10 offset-1" id="left-align">
-  We risk more than others think is safe.
-<br>
-  We care more than others think is wise.
-<br>
-  We expect more than others think is possible.
-<br>
-  We don’t predict the future; we WILL create it.
-</p>
-
-  <a href="#" class="link-outline col-10 offset-1">OUR PROMISE
-<img src="assets/arrow.svg" alt="#">
-  </a>
+  <div class="link-container col-10 offset-1">
+    <a href="who-we-are.html" class="link-outline col-12"><p class="col-10">GET TO KNOW US</p>
+    <img src="assets/arrow.svg" alt="#" class="col-2">
+    </a>
   </div>
 
 </section>
@@ -99,8 +91,8 @@ We were born in 1956 in a Bon Air garage when two roofers envisioned a better fu
 </section>
 
 
-<section class="zoom-1 col-12 p-0" id="push-2-mobile">
-<img src="assets/images/community.svg" alt="#">
+<section class="col-12 p-0" id="push-mobile">
+<img src="assets/images/push-2.svg" alt="#">
 </section>
 
 
@@ -108,15 +100,12 @@ We were born in 1956 in a Bon Air garage when two roofers envisioned a better fu
 
   <div class="reveal-container col-10 col-lg-3 offset-1">
   <h2 class="col-12">
-CREATING COMMUNITY<br><span class="turquoise-underline">& CULTURE</span>
+WHERE<br> WE'RE<br><span class="turquoise-underline">HEADING</span>
     </h2>
 
     <p class="col-12">
-      The workplace provides a sense of community that technology cannot replace. Communities materialize when spaces are designed based on the perceptions and expectations of the workforce as well as the purpose of an organization – creating culture – is the backbone of any successful organization.
+      While our success will always be measured by our real estate investments, we will be known for our ability to our people to think and do differently. We risk more than others think is safe.  We care more than others think is wise. We expect more than others think is possible. And, we don’t predict the future; we’ll create it.
     </p>
-        <p class="col-12">
-      Create the kind of workplace and company culture that will attract and retain great talent. Your people and your bottom line will thank you.
-      </p>
 
 </div>
 
