--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
 
 
 
-        <div class="logo-container col-1 col-md-4 col-lg-2 offset-lg-3 offset-md-4 offset-lg-0 float-left">
+        <div class="logo-container col-1 col-lg-2 offset-md-1 offset-lg-1 offset-lg-0 float-left">
       <a href="index.html" class="col-12 float-left p-0"><img src="assets/mark.svg" alt="Burns Scalo logo to home page" class="col-12 float-left"></a>
       <a href="index.html" class="d-none d-md-2 col-12 float-left p-0"><img src="assets/logo.svg" alt="Burns Scalo logo to home page" class="col-12 float-left"></a>
   </div>
       <h5 class="col-8">A Luxury Real Estate Firm</h5>
 
 
-      <div class="menu-container col-1 offset-1 offset-md-3 d-lg-none">
+      <div class="menu-container col-1 offset-1 d-lg-none">
       <a onclick="myFunction()" class="col-12 float-left"><img src="assets/menu.svg" alt="Dropdown Menu" class="dropdown-menu-custom"></a>
       </div>
 
@@ -62,47 +62,28 @@ Your browser does not support the video tag.
 <section class="col-12" id="container-2">
 <span class="top"></span>
 
-<!-- begin draft lines -->
-
-<svg xmlns="http://www.w3.org/2000/svg" width="2" height="1080" viewBox="0 0 2 1080" class="d-none svg-v-1">
-  <line data-name="Line V 1" y2=800 transform="translate(1)" fill="none" stroke="#D1D3D4" stroke-width="1"/>
-</svg>
-
-<svg xmlns="http://www.w3.org/2000/svg" width="2" height="1080" viewBox="0 0 2 1080" class="d-none svg-v-2">
-  <line data-name="Line V 1" y2=800 transform="translate(1)" fill="none" stroke="#D1D3D4" stroke-width="1"/>
-</svg>
-
-<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1920 2" class="d-none svg-h-1">
-  <line data-name="Line 1" x2="1920" transform="translate(0 1)" fill="none" stroke="#D1D3D4" stroke-width="1" id="line1"/>
-</svg>
-
-<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1920 2" class="d-none svg-h-2">
-  <line data-name="Line 1" x2="1920" transform="translate(0 1)" fill="none" stroke="#D1D3D4" stroke-width="1" id="line2"/>
-</svg>
-
-<!-- end draft lines -->
 
 
 
 
-  <h2 class="col-10 offset-1">REDEFINING
-    <br>
-    WORKPLACE
+  <h2 class="col-10 col-md-8 offset-1 offset-md-2">ELEVATING
+<br>
 <span class="green-underline">EXPERIENCE</span></h2>
 <div class="copy-container col-12">
-<p class="col-10 offset-1">
-  Today’s brightest minds have increasingly realized that the environment in which they work is nearly as important as the job itself. Flocking to organizations that both satisfy the needs they have when they’re in the workplace and align with their lives.
+<p class="col-10 col-md-8 offset-1 offset-md-2">
+As leaders in all industries continue to search for competitive advantages, they continue to overlook the most effective weapon in their arsenal—their workplace. We create spaces that people want to come to, not just have to. Dynamic spaces that not only attract today’s brightest talent but also spark motivation, innovation, happiness, and loyalty for years to come.
 </p>
 
-<p class="col-10 offset-1">
-  This evolution has become the primary motive of how happy, productive, and fulfilled employees feel in their workplace, playing a role in both organizational culture and an organization’s fiscal success.
-</p>
+
 
   </div>
 
-  <a href="#" class="link-outline col-10 offset-1"><p class="col-10">OUR PROMISE</p>
+<div class="link-container col-10 offset-1">
+  <a href="who-we-are.html" class="link-outline col-12"><p class="col-10">GET TO KNOW US</p>
   <img src="assets/arrow.svg" alt="#" class="col-2">
   </a>
+</div>
+
 </section>
 
 
@@ -112,8 +93,8 @@ Your browser does not support the video tag.
 </section>
 
 
-<section class="zoom-1 col-12 p-0" id="push-1-mobile">
-<img src="assets/images/community.svg" alt="#">
+<section class="col-12 p-0" id="push-mobile">
+<img src="assets/images/push-1.svg" alt="#">
 </section>
 
 
@@ -122,15 +103,13 @@ Your browser does not support the video tag.
 
   <div class="reveal-container col-10 col-lg-3 offset-1">
   <h2 class="col-12">
-CREATING COMMUNITY<br><span class="turquoise-underline">& CULTURE</span>
+PUTTING<br>PEOPLE<br><span class="turquoise-underline">FIRST</span>
     </h2>
 
     <p class="col-12">
-      The workplace provides a sense of community that technology cannot replace. Communities materialize when spaces are designed based on the perceptions and expectations of the workforce as well as the purpose of an organization – creating culture – is the backbone of any successful organization.
-    </p>
-        <p class="col-12">
-      Create the kind of workplace and company culture that will attract and retain great talent. Your people and your bottom line will thank you.
-      </p>
+Our approach is informed by human values—namely, a desire for health and happiness—and adheres to the principle that the workplace creates a framework for life. We ensure that helpful amenities are always within reach and conceive communities where people can interact. Keeping people’s minds fresh and sharp, while providing them with a stimulating stage to play out their lives.
+  </p>
+
 
 </div>
 
