--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 Your browser does not support the video tag.
 </video>
 
-<h1 class="col-10 offset-1">Shaping spaces that <br><span class="green-underline">shape lives.</span></h1>
+<h1 class="col-10 offset-1"><span class="delay-1">Shaping</span><br><span class="delay-2">spaces that</span><br><span class="green-underline delay-3">shape lives.</span></h1>
         </section>
 
 
