--- a/what-we-do.html
+++ b/what-we-do.html
@@ -73,15 +73,24 @@ As leaders in all industries continue to search for competitive advantages, they
 
 </div>
 
-<div class="col-10 offset-1">
+<div class="link-container col-10 offset-1">
 
-  <ul class="services-list col-12">
-    <li class="col-12"><a href="#">BROKERAGE</a></li>
-    <li class="col-12"><a href="#">DEVELOPMENT</a></li>
-    <li class="col-12"><a href="#">MANAGEMENT</a></li>
-  </ul>
+  <a href="#" class="col-12 link-outline-2"><p class="col-10">BROKERAGE</p>
+<img src="assets/arrow.svg" alt="#" class="col-2">
+</a>
+
+    <a href="#" class="col-12 link-outline-2"><p class="col-10">DEVELOPMENT</p>
+<img src="assets/arrow.svg" alt="#" class="col-2">
+    </a>
+
+  <a href="#" class="col-12 border-bottom link-outline-2"><p class="col-10">MANAGEMENT</p>
+<img src="assets/arrow.svg" alt="#" class="col-2">
+    </a>
+
+
 
 </div>
+
 </section>
 
 <section class="col-12 p-0 d-none d-lg-block">
